k8s/infra/apps/auth/overlays/dev/auth-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: auth-route
spec:
  entryPoints:
    - https
  routes:
    - match: PathPrefix(`/api/v1/auth`)
      kind: Rule
      priority: 69
      middlewares:
        - name: strip-prefix
      services:
        - name: auth-srv
          port: 3000
  tls:
    secretName: traefik-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/v1/auth
